# paperforge

./: AGENTIC_FUNDING_AND_COORDINATION.md  ARCHITECTURE.md  CONFIG_AND_TEST.md  INSTALL.md  MINER_AND_VALIDATOR.md  PaperForge_Subnet_Spec.docx  README.md  REAL_TESTING.md  RUN_AND_TEST.md  RUN_STEPS.md  SETUP_DONE.md  SOLANA_AI_AND_UNBROWSE.md  TESTING.md  pyproject.toml  requirements.txt  run_local_test.py  skills-lock.json
docker/sandbox/: Dockerfile
miner_template/: miner.py
paperforge/: __init__.py  config.py
paperforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paperforge/agents/: __init__.py  solana_payout.py  unbrowse_fetch.py
paperforge/api/: __init__.py  app.py
paperforge/bittensor/: __init__.py  miner_node.py  validator_node.py
paperforge/miner/: __init__.py  submission.py
paperforge/task/: __init__.py  loader.py  pool.py  schema.py
paperforge/validator/: __init__.py  harness.py  sandbox.py  scoring.py
scripts/: download_paper.py  install_bittensor.bat  install_bittensor_dev_prompt.bat  install_bittensor_with_sdk.bat  setup_unbrowse_cursor.md  setup_unbrowse_cursor.ps1  setup_wallets.bat
tasks/word2vec_skipgram/: benchmark.py  hidden_tests.py  reference.py  task_spec.json
